# lrgrep-ocaml

./: README.md  complete_but_basic.mlyl  dune-project  test.mlyl
demo/: setup_shell.sh
src/: dune  frontend.ml  interpreter.ml  parse_errors.mlyl
src/failures/: dune  items_freq.txt  process.ml  sentences.txt  tmp.ml
